--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,14 +1,14 @@
 blank_issues_enabled: false
 contact_links:
   - name: Ask a question
-    url: https://github.com/:vendor_name/:package_name/discussions/new?category=q-a
+    url: https://github.com/patrickcurl/laravel-computed-columns/discussions/new?category=q-a
     about: Ask the community for help
   - name: Request a feature
-    url: https://github.com/:vendor_name/:package_name/discussions/new?category=ideas
+    url: https://github.com/patrickcurl/laravel-computed-columns/discussions/new?category=ideas
     about: Share ideas for new features
   - name: Report a security issue
-    url: https://github.com/:vendor_name/:package_name/security/policy
+    url: https://github.com/patrickcurl/laravel-computed-columns/security/policy
     about: Learn how to notify us for sensitive bugs
   - name: Report a bug
-    url: https://github.com/:vendor_name/:package_name/issues/new
+    url: https://github.com/patrickcurl/laravel-computed-columns/issues/new
     about: Report a reproducible bug
