--- a/.github/workflows/fix-php-code-style-issues.yml
+++ b/.github/workflows/fix-php-code-style-issues.yml
@@ -1,21 +1,19 @@
-name: Fix PHP code style issues
+# name: Fix PHP code style issues
+# on: [push]
+# jobs:
+#   php-code-styling:
+#     runs-on: ubuntu-latest
 
-on: [push]
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+#         with:
+#           ref: ${{ github.head_ref }}
 
-jobs:
-  php-code-styling:
-    runs-on: ubuntu-latest
+#       - name: Fix PHP code style issues
+#         uses: aglipanci/laravel-pint-action@1.0.0
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: Fix PHP code style issues
-        uses: aglipanci/laravel-pint-action@1.0.0
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Fix styling
+#       - name: Commit changes
+#         uses: stefanzweifel/git-auto-commit-action@v4
+#         with:
+#           commit_message: Fix styling
