--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require-dev": {
         "laravel/framework": "^9.33",
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0",
+        "nunomaduro/collision": "^6.3",
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
@@ -35,10 +35,11 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-ray": "^1.26",
-        "zvive/fixer": "^9.0"
+        "zvive/fixer": "dev-main"
     },
     "autoload": {
         "psr-4": {
+            "App\\": "skeleton/app",
             "ComputedColumns\\": "src",
             "ComputedColumns\\Database\\Factories\\": "database/factories"
         }
@@ -50,9 +51,13 @@
     },
     "scripts": {
         "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
+        "format": "vendor/bin/pint",
+        "pest": "vendor/bin/pest",
+        "post-autoload-dump": [
+            "@php ./vendor/bin/testbench package:discover --ansi"
+        ],
+        "test": "./vendor/bin/testbench package:test",
+        "test-coverage": "vendor/bin/test --coverage"
     },
     "config": {
         "sort-packages": true,
